scripts/chapter7/nginx-ssl.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-ssl
  labels:
    app: nginx-ssl
spec:
  containers:
  - name: nginx-ssl
    image: nginx
    volumeMounts:
    - name: ssl-config
      mountPath: /etc/nginx/conf.d/ssl.conf
      subPath: ssl.conf
    - name: tls
      mountPath: /etc/nginx/ssl
  volumes:
  - name: ssl-config
    configMap:
      name: ssl-config
  - name: tls
    secret:
      secretName: nginx-tls-secret

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssl
spec:
  selector:
    app: nginx-ssl
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
